--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM37jukpFSRAnrmLpiuoBXc",
+      "authorship_tag": "ABX9TyNnppDXVRjqXsA9YEPdXkGL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,7 +521,7 @@
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +535,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1592,12 +1592,63 @@
       },
       "source": [
         "def crear(dimension):\n",
-        "  score-partwise = ET.Element('score-partwise')\n",
-        "  score-partwise.set('version','3.1')\n",
-        "  defaults = ET.SubElement(score-partwise,'defaults')\n",
-        "  "
+        "  score_partwise = ET.Element('score-partwise')\n",
+        "  score_partwise.set('version','3.1')\n",
+        "  defaults = ET.SubElement(score_partwise,'defaults')\n",
+        "  scaling = ET.SubElement(defaults,'scaling')\n",
+        "  millimeters = ET.SubElement(scaling,'millimeters')\n",
+        "  millimeters.text = '4.8'\n",
+        "  tenths = ET.SubElement(scaling,'tenths')\n",
+        "  tenths.text = '40'\n",
+        "  page_layout = ET.SubElement(defaults,'page-layout')\n",
+        "  page_height = ET.SubElement(page_layout,'page-height')\n",
+        "  page_height.text = str(dimension[1])\n",
+        "  page_width = ET.SubElement(page_layout,'page-width')\n",
+        "  page_width.text = str(dimension[0])\n",
+        "  page_margins = ET.SubElement(page_layout,'page-margins')\n",
+        "  left_margin = ET.SubElement(page_margins,'left-margin')\n",
+        "  left_margin.text = '150'\n",
+        "  right_margin = ET.SubElement(page_margins,'right-margin')\n",
+        "  right_margin.text = '150'\n",
+        "  top_margin = ET.SubElement(page_margins,'top-margin')\n",
+        "  top_margin.text = '10'\n",
+        "  bottom_margin = ET.SubElement(page_margins,'bottom-margin')\n",
+        "  bottom_margin.text = '10'\n",
+        "  word_font = ET.SubElement(defaults,'word-font')\n",
+        "  word_font.set('font-family','Edwin')\n",
+        "  word_font.set('font-size','10')\n",
+        "  lyric_font = ET.SubElement(defaults,'lyric-font')\n",
+        "  lyric_font.set('font-family','Edwin')\n",
+        "  lyric_font.set('font-size','10')\n",
+        "  part_list = ET.SubElement(score_partwise,'part-list')\n",
+        "  score_part = ET.SubElement(part_list,'score-part')\n",
+        "  score_part.set('id','P1')\n",
+        "  part_name = ET.SubElement(score_part,'part-name')\n",
+        "  part_name.text = 'Piano'\n",
+        "  part_abbreviation = ET.SubElement(score_part,'part-abbreviation')\n",
+        "  part_abbreviation.text = 'Pno.'\n",
+        "  score_instrument = ET.SubElement(score_part,'score-instrument')\n",
+        "  score_instrument.set('id','P1-I1')\n",
+        "  instrument_name = ET.SubElement(score_instrument,'instrument-name')\n",
+        "  instrument_name.text = 'Piano'\n",
+        "  midi_device = ET.SubElement(score_part,'midi-device')\n",
+        "  midi_device.set('id','P1-I1')\n",
+        "  midi_device.set('port','1')\n",
+        "  midi_instrument = ET.SubElement(score_part,'midi-instrument')\n",
+        "  midi_instrument.set('id','P1-I1')\n",
+        "  midi_chanel = ET.SubElement(midi_instrument,'midi-chanel')\n",
+        "  midi_chanel.text = '1'\n",
+        "  midi_program = ET.SubElement(midi_instrument,'midi-program')\n",
+        "  midi_program.text = '1'\n",
+        "  volume = ET.SubElement(midi_instrument,'volume')\n",
+        "  volume.text = '78.7402'\n",
+        "  pan = ET.SubElement(midi_instrument,'pan')\n",
+        "  pan.text = '78.7402'\n",
+        "  part = ET.SubElement(score_partwise,'part')\n",
+        "  part.set('id','P1')\n",
+        "  return score_partwise"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1606,33 +1657,12 @@
         "id": "oxz2GpZmJhYE"
       },
       "source": [
-        "data = ET.Element('data')\n",
-        "items = ET.SubElement(data, 'items')\n",
-        "item1 = ET.SubElement(items, 'item')\n",
-        "item2 = ET.SubElement(items, 'item')\n",
-        "item1.set('name','item1')\n",
-        "item2.set('name','item2')\n",
-        "item1.text = 'item1abc'\n",
-        "item2.text = 'item2abc'\n",
-        "\n",
-        "# create a new XML file with the results\n",
-        "mydata = prettify(data)\n",
+        "mydata = crear((1300,600))\n",
+        "mydata = prettify(mydata)\n",
         "with open(\"items2.xml\", \"w\") as myfile:\n",
         "  myfile.write(mydata)"
       ],
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KyIpFuhtknAN"
-      },
-      "source": [
-        "tree = ET.parse('plantilla.xml')\n",
-        "root = tree.getroot()\n"
-      ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": []
     }
   ]
