--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnppDXVRjqXsA9YEPdXkGL",
+      "authorship_tag": "ABX9TyPgnQ6sX7aAt+C/pZxLMEZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1586,6 +1586,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_ye7K8Rhls3l"
+      },
+      "source": [
+        "## Funciones"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "E2u8qHfAIsd2"
@@ -1648,8 +1657,61 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 13,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2PybfCgtYrNz"
+      },
+      "source": [
+        "def add_measuere(mydata,inicio=False):\n",
+        "  idx = [a.tag for a in mydata.getchildren()].index('part')\n",
+        "  part = mydata.getchildren()[idx]\n",
+        "  if inicio != False:\n",
+        "    measure = ET.SubElement(part,'measure')\n",
+        "    print = ET.SubElement(measure,'print')\n",
+        "    print.set('new-system','yes')\n",
+        "    system_layout = ET.SubElement(print,'system-layout')\n",
+        "    system_margins = ET.SubElement(system_layout,'system-margins')\n",
+        "    left_margin = ET.SubElement(system_margins,'left-margin')\n",
+        "    left_margin.text = '50.00'\n",
+        "    right_margin = ET.SubElement(system_margins,'right-margin')\n",
+        "    right_margin.text = '50.00'\n",
+        "    system_distance = ET.SubElement(system_layout,'system-distance')\n",
+        "    system_distance.text = '85'\n",
+        "    attributes = ET.SubElement(measure,'attributes')\n",
+        "    divisions = ET.SubElement(attributes,'divisions')\n",
+        "    divisions.text = '32'\n",
+        "    key = ET.SubElement(attributes,'key')\n",
+        "    fifths = ET.SubElement(key,'fifths')\n",
+        "    fifths.text = str(inicio['fifths'])\n",
+        "    time = ET.SubElement(attributes,'time')\n",
+        "    beats = ET.SubElement(time,'beats')\n",
+        "    beats.text = str(inicio['compas'][0])\n",
+        "    beat_type = ET.SubElement(time,'beat-type')\n",
+        "    beat_type.text = str(inicio['compas'][2])\n",
+        "    clef = ET.SubElement(attributes,'clef')\n",
+        "    sing = ET.SubElement(clef,'sing')\n",
+        "    sing.text = str(inicio['clef'][0])\n",
+        "    line = ET.SubElement(clef,'line')\n",
+        "    line.text = str(inicio['clef'][1])\n",
+        "  else:\n",
+        "    measure = ET.SubElement(part,'measure')\n",
+        "  return mydata"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "izBBfqGmlwiE"
+      },
+      "source": [
+        "## Ejemplo"
+      ]
     },
     {
       "cell_type": "code",
@@ -1657,12 +1719,18 @@
         "id": "oxz2GpZmJhYE"
       },
       "source": [
+        "%%capture\n",
         "mydata = crear((1300,600))\n",
+        "inicio = {'fifths':-3,'compas':'6x8','clef':'G2'}\n",
+        "mydata = add_measuere(mydata,inicio)\n",
+        "mydata = add_measuere(mydata)\n",
+        "mydata = add_measuere(mydata)\n",
+        "mydata = add_measuere(mydata)\n",
         "mydata = prettify(mydata)\n",
         "with open(\"items2.xml\", \"w\") as myfile:\n",
         "  myfile.write(mydata)"
       ],
-      "execution_count": 16,
+      "execution_count": 52,
       "outputs": []
     }
   ]
