--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgnQ6sX7aAt+C/pZxLMEZF",
+      "authorship_tag": "ABX9TyPMlvTcrhRKol2jQw6l2uoc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -503,6 +503,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PVXT1_vOOEMU"
+      },
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NojspdWi06UX"
@@ -572,7 +585,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1582,7 +1595,7 @@
         "          'claved3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'claved4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1657,7 +1670,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 39,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1701,7 +1714,22 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": 48,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gspeqH1qK9oa"
+      },
+      "source": [
+        "def add_note(mydata):\n",
+        "  idx = [a.tag for a in mydata.getchildren()].index('part')\n",
+        "  part = mydata.getchildren()[idx]\n",
+        "  measure = part.getchildren()[-1] # Añadimos a el último pentagrama\n",
+        "  note = ET.SubElement(measure,'note')"
+      ],
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1719,7 +1747,6 @@
         "id": "oxz2GpZmJhYE"
       },
       "source": [
-        "%%capture\n",
         "mydata = crear((1300,600))\n",
         "inicio = {'fifths':-3,'compas':'6x8','clef':'G2'}\n",
         "mydata = add_measuere(mydata,inicio)\n",
@@ -1730,7 +1757,7 @@
         "with open(\"items2.xml\", \"w\") as myfile:\n",
         "  myfile.write(mydata)"
       ],
-      "execution_count": 52,
+      "execution_count": 6,
       "outputs": []
     }
   ]
