--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMlvTcrhRKol2jQw6l2uoc",
+      "authorship_tag": "ABX9TyPP6QijHWeaf8OMzyMHfYmG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
       ],
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -534,7 +534,7 @@
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -565,7 +565,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -622,7 +622,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -664,7 +664,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -715,7 +715,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -809,7 +809,7 @@
         "\n",
         "  return data"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -846,7 +846,7 @@
         "      pents.append((x-5,y-5,w+5,h+5))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -908,7 +908,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1579,7 +1579,7 @@
         "id": "F-nKOnJnniwe"
       },
       "source": [
-        "## Salto a xml\n",
+        "# Salto a xml\n",
         "- Transforma esa lista de elementos a el formato musicxml"
       ]
     },
@@ -1595,7 +1595,18 @@
         "          'claved3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'claved4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": 1,
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H0YlqNtEU_pC"
+      },
+      "source": [
+        "nombres={'background':'background','claved':'C', 'claves':'G', 'clavef':'F', 'nota1':'quarter', 'nota2':'half', 'nota4':'whole', 'nota1:2':'eighth', 'nota1:4':'16th', 'notae':'grace', 'sos':'sharp', 'bem':'flat', 'bec':'natural', 'sil0':'multiple-rest', 'sil1':'quarter', 'sil2':'half', 'sil1:2':'eighth', 'sil1:4':'16th', '2x4':'2x4', '3x4':'3x4', '4x4':'4x4', '6x8':'6x8', 'punt':'dot', 'liga':'beam','3':'tuplet','line':'measure','P2':'P2', 'nota1:8':'32nd', 'cal':'cal', '3x2':'3x2','mf':'mf','P1':'P1','check':'check','3x8':'3x8','2x2':'2x2'}"
+      ],
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1670,7 +1681,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1714,7 +1725,7 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1723,13 +1734,50 @@
         "id": "gspeqH1qK9oa"
       },
       "source": [
-        "def add_note(mydata):\n",
+        "def add_note(mydata,atributos): # Falta tratar texto, ligaduras, chords, puntos, corcheas juntas y especiales\n",
         "  idx = [a.tag for a in mydata.getchildren()].index('part')\n",
         "  part = mydata.getchildren()[idx]\n",
-        "  measure = part.getchildren()[-1] # Añadimos a el último pentagrama\n",
-        "  note = ET.SubElement(measure,'note')"
+        "  measure = part.getchildren()[-1] # Añadimos en el último pentagrama\n",
+        "  note = ET.SubElement(measure,'note')\n",
+        "  pitch = ET.SubElement(note,'pitch')\n",
+        "  step = ET.SubElement(pitch,'step')\n",
+        "  step.text = atributos['step']\n",
+        "  octave = ET.SubElement(pitch,'octave')\n",
+        "  octave.text = atributos['octave']\n",
+        "  duration = ET.SubElement(note,'duration')\n",
+        "  duration.text = atributos['duration']\n",
+        "  voice = ET.SubElement(note,'voice')\n",
+        "  voice.text = '1'\n",
+        "  tipo = ET.SubElement(note,'type')\n",
+        "  tipo.text = atributos['type']\n",
+        "  stem = ET.SubElement(note,'stem')\n",
+        "  stem.text = atributos['stem']\n",
+        "  return mydata"
       ],
-      "execution_count": 21,
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oAzCEOpxFSuY"
+      },
+      "source": [
+        "def add_rest(mydata,atributos): # Falta gestionar los puntos y ligaduras\n",
+        "  idx = [a.tag for a in mydata.getchildren()].index('part')\n",
+        "  part = mydata.getchildren()[idx]\n",
+        "  measure = part.getchildren()[-1] # Añadimos en el último pentagrama\n",
+        "  note = ET.SubElement(measure,'note')\n",
+        "  rest = ET.SubElement(note,'rest')\n",
+        "  duration = ET.SubElement(note,'duration')\n",
+        "  duration.text = atributos['duration']\n",
+        "  voice = ET.SubElement(note,'voice')\n",
+        "  voice.text = '1'\n",
+        "  tipo = ET.SubElement(note,'type')\n",
+        "  tipo.text = atributos['type']\n",
+        "  return mydata"
+      ],
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1749,15 +1797,15 @@
       "source": [
         "mydata = crear((1300,600))\n",
         "inicio = {'fifths':-3,'compas':'6x8','clef':'G2'}\n",
+        "atributos = {'step':'C','octave':'5','type':'chord','stem':'down','duration':'16'}\n",
         "mydata = add_measuere(mydata,inicio)\n",
-        "mydata = add_measuere(mydata)\n",
-        "mydata = add_measuere(mydata)\n",
+        "mydata = add_note(mydata,atributos)\n",
         "mydata = add_measuere(mydata)\n",
         "mydata = prettify(mydata)\n",
         "with open(\"items2.xml\", \"w\") as myfile:\n",
         "  myfile.write(mydata)"
       ],
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": []
     }
   ]
