--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtpnDOixWtu1U8szwmuVDv",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOJk7/SrjoaGCnbq13x5y7e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +392,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +404,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +416,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +428,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +440,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +452,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +467,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +500,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +513,7 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,7 +535,7 @@
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +549,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -565,7 +566,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +586,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +623,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +665,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +716,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -809,7 +810,7 @@
         "\n",
         "  return data"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,7 +847,7 @@
         "      pents.append((x-5,y-5,w+5,h+5))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +875,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -908,7 +909,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +933,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,7 +964,7 @@
         "state_dict = torch.load('mejor.pth')\n",
         "detector = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -978,7 +979,7 @@
       "source": [
         "detector.load_state_dict(state_dict)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1013,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1047,7 +1048,7 @@
         "Obra = np.concatenate(Obra,axis=0)\n",
         "mostrarImagen(Obra)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1094,7 +1095,7 @@
       "source": [
         "data = image2data(Obra)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,7 +1563,7 @@
       "source": [
         "print(data)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1595,7 +1596,7 @@
         "          'claved3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'claved4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1606,7 +1607,7 @@
       "source": [
         "nombres={'background':'background','claved':'C', 'claves':'G2', 'clavef':'F', 'nota1':'quarter', 'nota2':'half', 'nota4':'whole', 'nota1:2':'eighth', 'nota1:4':'16th', 'notae':'grace', 'sos':'sharp', 'bem':'flat', 'bec':'natural', 'sil0':'multiple-rest', 'sil1':'quarter', 'sil2':'half', 'sil1:2':'eighth', 'sil1:4':'16th', '2x4':'2x4', '3x4':'3x4', '4x4':'4x4', '6x8':'6x8', 'punt':'dot', 'liga':'beam','3':'tuplet','line':'measure','P2':'P2', 'nota1:8':'32nd', 'cal':'cal', '3x2':'3x2','mf':'mf','P1':'P1','check':'check','3x8':'3x8','2x2':'2x2'}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1681,7 +1682,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,7 +1726,7 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1754,7 +1755,7 @@
         "  stem.text = atributos['stem']\n",
         "  return mydata"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1777,7 +1778,7 @@
         "  tipo.text = atributos['type']\n",
         "  return mydata"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1812,7 +1813,7 @@
         "  \n",
         "  return mydata"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1860,19 +1861,9 @@
       "source": [
         "for elemento in data:\n",
         "  if 'pent' in elemento:\n",
-        "    \n",
-        "  if 'text' in elemento:\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yJaqwhgxk0Jg"
-      },
-      "source": [
-        ""
+        "    inico = {'fifths':0,'compas':'4x4','clef':'G2'} # Valores por defecto\n",
+        "    L \n",
+        "  if 'text' in elemento:"
       ],
       "execution_count": null,
       "outputs": []
