--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -6,7 +6,7 @@
       "name": "image2xml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJk7/SrjoaGCnbq13x5y7e",
+      "authorship_tag": "ABX9TyM3b3KNtZ8QCY/9tAQapl8L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1862,7 +1862,13 @@
         "for elemento in data:\n",
         "  if 'pent' in elemento:\n",
         "    inico = {'fifths':0,'compas':'4x4','clef':'G2'} # Valores por defecto\n",
-        "    L \n",
+        "    for l elemento['labels']: if 'x' in l: n = elemento['labels'].index(l)\n",
+        "    if n+1 == len(elemento['labels']):\n",
+        "    else:\n",
+        "      L = elemento['labels'][:n+1]\n",
+        "      inicio['fifths'] = -len([l for l in L if l == 'bem']) + len([l in L if l == 'sos'])\n",
+        "      inicio['clef'] = [l for l in L if 'clave' in l][0]\n",
+        "      inicio['compas'] = L[-1]\n",
         "  if 'text' in elemento:"
       ],
       "execution_count": null,
