--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM3b3KNtZ8QCY/9tAQapl8L",
+      "authorship_tag": "ABX9TyMqtyQXyYZuYRrBZzYpvSL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1862,14 +1861,20 @@
         "for elemento in data:\n",
         "  if 'pent' in elemento:\n",
         "    inico = {'fifths':0,'compas':'4x4','clef':'G2'} # Valores por defecto\n",
-        "    for l elemento['labels']: if 'x' in l: n = elemento['labels'].index(l)\n",
-        "    if n+1 == len(elemento['labels']):\n",
+        "    for l in elemento['labels']:\n",
+        "      if 'x' in l: n = elemento['labels'].index(l)\n",
+        "      else: n = len(elemento['labels'])\n",
+        "    if n == len(elemento['labels']):\n",
+        "      L = [elemento['labels'][i] for i in range(0,n) if elemento['bboxs'][i][0] <= 90]\n",
+        "      inicio['fifths'] = -len([l for l in L if l == 'bem']) + len([l for l in L if l == 'sos'])\n",
+        "      inicio['clef'] = [l for l in L if 'clave' in l][0]\n",
+        "      \n",
         "    else:\n",
         "      L = elemento['labels'][:n+1]\n",
-        "      inicio['fifths'] = -len([l for l in L if l == 'bem']) + len([l in L if l == 'sos'])\n",
+        "      inicio['fifths'] = -len([l for l in L if l == 'bem']) + len([l for l in L if l == 'sos'])\n",
         "      inicio['clef'] = [l for l in L if 'clave' in l][0]\n",
         "      inicio['compas'] = L[-1]\n",
-        "  if 'text' in elemento:"
+        "  if 'text' in elemento: pass"
       ],
       "execution_count": null,
       "outputs": []
