--- a/Notebooks/SacarMúsica/xml2midi.ipynb
+++ b/Notebooks/SacarMúsica/xml2midi.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "xml2midi.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMoD9dT8upEAqZbziyPgz8N",
+      "authorship_tag": "ABX9TyPzC84WwCWt2IryjB9WAvDK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,10 +51,21 @@
       },
       "source": [
         "import music21\n",
-        "c = music21.converter.parse('prueba.xml')\n",
-        "c.write('midi','midi.mid')"
+        "import pretty_midi\n",
+        "# Abrimos el archivo MusicXML Transformamos a MIDI y lo guardamos en archivo.mid\n",
+        "c = music21.converter.parse('archivo.xml')\n",
+        "c.write('midi','archivo.mid')\n",
+        "\n",
+        "# Mostramos la imagen que genera el archivo MusicXML\n",
+        "c.show() \n",
+        "\n",
+        "# Transformamos el archivo MIDI a sonido\n",
+        "midi_data = pretty_midi.PrettyMIDI('archivo.mid')\n",
+        "Fs = 22050\n",
+        "audio_data = midi_data.synthesize(fs=Fs)\n",
+        "ipd.Audio(audio_data, rate=Fs)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
