--- a/Notebooks/SacarMúsica/tf_deep_omr.ipynb
+++ b/Notebooks/SacarMúsica/tf_deep_omr.ipynb
@@ -54,7 +54,7 @@
         "%%capture\n",
         "!git clone https://github.com/OMR-Research/tf-end-to-end.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
         "!wget https://grfia.dlsi.ua.es/primus/models/PrIMuS/Semantic-Model.zip\n",
         "!unzip Semantic-Model.zip"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "import cv2\n",
         "from matplotlib import pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,29 +700,27 @@
         "id": "KQvq067WC5oj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 191
+          "height": 181
         },
-        "outputId": "2da816a3-cf84-458b-9117-dd1e879bb080"
+        "outputId": "ab6a302e-83ef-45d0-94b8-60aa4661d185"
       },
       "source": [
         "pent = cv2.imread('/content/pent2300.jpg')\n",
         "fig, ax = plt.subplots(1,1,figsize=(16,16))\n",
         "a = !python '/content/tf-end-to-end/ctc_predict.py' -image '/content/pent2300.jpg' -model '/content/semantic_model.meta' -vocabulary '/content/tf-end-to-end/Data/vocabulary_semantic.txt'\n",
         "print(a[-1])\n",
-        "print('')\n",
         "ax.axis('off')\n",
         "ax.xaxis.set_ticklabels([])\n",
         "ax.yaxis.set_ticklabels([])\n",
         "ax.imshow(pent)\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['clef-G2', 'keySignature-BbM', 'timeSignature-3/2', 'note-A4_quarter', 'note-Bb4_eighth', 'barline', 'note-C5_eighth', 'note-Bb4_eighth', 'note-A4_eighth', 'barline', 'note-A4_eighth.', 'barline', 'note-G#4_half', 'note-C5_double_whole.', 'barline']\n",
-            "\n"
+            "['clef-G2', 'keySignature-BbM', 'timeSignature-3/2', 'note-A4_quarter', 'note-Bb4_eighth', 'barline', 'note-C5_eighth', 'note-Bb4_eighth', 'note-A4_eighth', 'barline', 'note-A4_eighth.', 'barline', 'note-G#4_half', 'note-C5_double_whole.', 'barline']\n"
           ],
           "name": "stdout"
         },
